# matrix-rain-macos-screensaver

./: .gitignore  AGENTS.md  Cargo.toml  FONT_REQUIREMENTS.md  README.md  initial-prompt.md  product-summary.md  run-demo.sh
.github/workflows/: ci.yml  release.yml
documentation/: product-details.md  product-summary.md  technical-details.md
documents/: background-layer-feature.md  implementation-summary.md  product-details.md  product-summary.md  screensaver-implementation-plan.md  technical-details.md
examples/: diagnose.rs  test_charset.rs  test_render.rs
macos-screensaver/: README.md  build-screensaver.sh
macos-screensaver/MatrixRainSaver/: BridgingHeader.h  ConfigurationView.swift  Info.plist  MatrixRainView.swift  Preferences.swift
scripts/: build-dmg.sh  build-installer.sh  build-universal.sh  bump-version.sh  sync-version.sh
src/: ffi.rs  lib.rs
src/config/: character_sets.rs  colors.rs  mod.rs  speed.rs
src/engine/: column.rs  matrix_rain.rs  mod.rs
src/rendering/: color.rs  mod.rs  renderer.rs  terminal.rs
