[package]
name = "matrix_rain_core"
version = "1.1.17"
edition = "2021"
authors = ["Matrix Rain Contributors"]
description = "A Matrix-style digital rain screensaver for macOS with customizable character sets and colors"
license = "MIT"
repository = "https://github.com/iggybdda/matrix-rain-macos-screensaver"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CLI dependencies (optional, only used by binary)
crossterm = { version = "0.27", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"
core-graphics = "0.23"

[dev-dependencies]

[features]
default = []
cli = ["crossterm", "clap", "anyhow"]
ffi = []

[lib]
name = "matrix_rain_core"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "matrix-rain"
path = "src/bin/matrix-rain.rs"
required-features = ["cli"]
