[package]
name = "matrix_rain_core"
version = "1.1.17"
edition = "2021"
authors = ["Matrix Rain Contributors"]
description = "A Matrix-style digital rain screensaver for macOS with customizable character sets and colors"
license = "MIT"
repository = "https://github.com/iggybdda/matrix-rain-macos-screensaver"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"
core-graphics = "0.23"

[dev-dependencies]

[features]
default = []
ffi = []
windowed = []

[lib]
name = "matrix_rain_core"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "matrix-rain-test"
path = "src/bin/test-window.rs"
required-features = ["windowed"]
